--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 </div>
 
 <div class="block note-box">
-  <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING & PENGUMUMAN</h2>
+  <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING </h2>
   <textarea id="catatanWarga" class="editable" placeholder="Klik Admin ON untuk mengisi catatan di sini..."></textarea>
   <div id="catatanPrint"></div> </div>
 
@@ -267,3 +267,4 @@ updateUI();
 </script>
 </body>
 </html>
+
