--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@ button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
     white-space: pre-wrap; word-wrap: break-word;
     display: block;
 }
-/* Eleman bayangan buat cetak */
-#catatanPrint {
-    display: none; white-space: pre-wrap; font-size:1.1rem; line-height:1.5; text-transform:none;
-}
+#catatanPrint { display: none; white-space: pre-wrap; font-size:1.1rem; line-height:1.5; text-transform:none; }
 
 table{width:100%;border-collapse:collapse}
 th,td{border:1px solid var(--border);padding:6px;text-align:left}
@@ -42,6 +39,7 @@ th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:transparent; color:var(--text); border:1px solid transparent}
 
+/* THEME CYBERPUNK LED */
 .theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
 .theme-cyberpunk .block { border: 1px solid #ff00ff; animation: ledRotate 3s linear infinite; }
 .theme-cyberpunk th {background:#330033; color:#00ffcc; border-color:#00ffcc}
@@ -53,6 +51,20 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
   100%{box-shadow:0 0 5px #ff00ff, 0 0 10px #00ffcc}
 }
 
+/* OVERLAY MODAL UNTUK CHECKLIST */
+#checklistModal {
+    display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
+    background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box;
+}
+.checklist-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:950px; margin:0 auto; }
+.checklist-content h1 { text-align:center; margin:0; font-size:1.5rem; background:#92c694; padding:10px; }
+.checklist-content h2 { text-align:center; margin:0; font-size:1.2rem; background:#d9ead3; padding:5px; border-bottom:2px solid #000; }
+.table-checklist { width:100%; border:2px solid #000; margin-top:10px; }
+.table-checklist th, .table-checklist td { border:1px solid #000; text-align:center; padding:5px; font-weight:bold; font-size:0.9rem; }
+.table-checklist th { background:#9fc5e8; }
+.status-v { background:#93c47d; color:#000; } /* Hijau */
+.status-x { background:#e06666; color:#000; } /* Merah */
+
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
@@ -61,6 +73,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 </style>
 </head>
 <body>
+
 <header>
   LAPORAN KAS GANG MAWAR 3
   <div style="margin-top:10px; text-align:center">
@@ -76,6 +89,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
     <div class="menu-items" id="menuItems">
         <button id="adminBtn" class="off">ADMIN OFF</button>
         <button id="pullBtn" class="warning" style="display:none">TARIK SALDO LALU</button>
+        <button onclick="openChecklist()" class="primary">CHECKLIST KAS</button>
         <button id="themeBtn" class="primary">GANTI TEMA</button>
         <button id="cetakBtn" class="primary">CETAK LAPORAN</button>
     </div>
@@ -105,9 +119,35 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 </div>
 
 <div class="block note-box">
-  <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING </h2>
+  <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING & PENGUMUMAN</h2>
   <textarea id="catatanWarga" class="editable" placeholder="Klik Admin ON untuk mengisi catatan di sini..."></textarea>
-  <div id="catatanPrint"></div> </div>
+  <div id="catatanPrint"></div>
+</div>
+
+<div id="checklistModal">
+    <div style="text-align:center; margin-bottom:10px;">
+        <button onclick="closeChecklist()" style="background:#d9534f; color:#fff;">TUTUP [X]</button>
+        <button onclick="cetakChecklist()" style="background:var(--accent); color:#fff; margin-left:10px;">CETAK GAMBAR</button>
+    </div>
+    <div class="checklist-content" id="checklistPrintArea">
+        <h1 id="judulChecklist">CHECKLIST KAS GANG MAWAR 3</h1>
+        <h2 id="subJudulChecklist">PERIODE 2026</h2>
+        <table class="table-checklist">
+            <thead>
+                <tr>
+                    <th rowspan="2" style="width:30px">No.</th>
+                    <th rowspan="2">NAMA</th>
+                    <th colspan="12" id="headerTahun">CHECKLIST KAS 2026</th>
+                </tr>
+                <tr>
+                    <th>JAN</th><th>FEB</th><th>MAR</th><th>APR</th><th>MEI</th><th>JUN</th>
+                    <th>JUL</th><th>AGT</th><th>SEP</th><th>OKT</th><th>NOV</th><th>DES</th>
+                </tr>
+            </thead>
+            <tbody id="tbChecklist"></tbody>
+        </table>
+    </div>
+</div>
 
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
@@ -158,7 +198,9 @@ function recalc(){
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
   const inputs=tr.querySelectorAll('input');
   if(ketVal.includes('BELUM BAYAR')){ inputs.forEach(inp=>{inp.style.backgroundColor='var(--danger)'; inp.style.color='#fff';}); }
-  else if(ketVal.includes('LUNAS') || ketVal.includes('SUDAH BAYAR') || ketVal.includes('SISA KAS')){ inputs.forEach(inp=>{inp.style.backgroundColor='var(--success)'; inp.style.color='#fff';}); }
+  else if(ketVal.includes('LUNAS') || ketVal.includes('SUDAH BAYAR') || ketVal.includes('SISA KAS') || ketVal.includes('BAYAR TUNAI') || ketVal.includes('BAYAR TRANSFER')){ 
+      inputs.forEach(inp=>{inp.style.backgroundColor='var(--success)'; inp.style.color='#fff';}); 
+  }
   else { inputs.forEach(inp=>{inp.style.backgroundColor='transparent'; inp.style.color='var(--text)';}); }
  });
  document.querySelectorAll('#tbKeluar tr').forEach(tr=>{
@@ -195,6 +237,65 @@ function saveData(){
  db.ref('kas_data/'+bulan+'-'+tahun).update({masuk:m, keluar:k, catatan:cat, updated:formatUpdate});
  document.getElementById('catatanPrint').innerText = cat;
  document.getElementById('lastUpdate').textContent = "TERAKHIR DI UPDATE PADA: " + formatUpdate;
+}
+
+// FUNGSI CHECKLIST KAS
+async function openChecklist() {
+    toggleMenu();
+    const modal = document.getElementById('checklistModal');
+    const tb = document.getElementById('tbChecklist');
+    document.getElementById('subJudulChecklist').innerText = `PERIODE ${tahun}`;
+    document.getElementById('headerTahun').innerText = `CHECKLIST KAS ${tahun}`;
+    tb.innerHTML = '<tr><td colspan="14">Sabar, lagi ngitung data warga...</td></tr>';
+    modal.style.display = 'block';
+
+    const matrix = {}; // {nama: [Jan, Feb, ...]}
+    // Ambil data dari Jan (0) sampai Des (11)
+    for (let m = 0; m <= 11; m++) {
+        const snap = await db.ref(`kas_data/${m}-${tahun}`).once('value');
+        const d = snap.val();
+        namaAnggota.forEach((nama, idx) => {
+            if (idx === 0) return; // Lewati Sisa Kas
+            if (!matrix[nama]) matrix[nama] = Array(12).fill('X');
+            
+            if (d && d.masuk) {
+                // Cari nama yang cocok di data bulan tersebut
+                const row = d.masuk.find(r => r.nama === nama);
+                if (row) {
+                    const ket = row.ket.toUpperCase();
+                    const kuncis = ["LUNAS", "SUDAH BAYAR", "BAYAR TUNAI", "BAYAR TRANSFER"];
+                    if (kuncis.some(k => ket.includes(k))) {
+                        matrix[nama][m] = '✓';
+                    } else if (ket.includes("BELUM BAYAR") || ket.trim() === "") {
+                        matrix[nama][m] = 'X';
+                    }
+                }
+            }
+        });
+    }
+
+    tb.innerHTML = '';
+    Object.keys(matrix).forEach((nama, i) => {
+        const tr = document.createElement('tr');
+        let html = `<td>${i+1}</td><td style="text-align:left">Bpk. ${nama}</td>`;
+        matrix[nama].forEach(status => {
+            const cls = status === '✓' ? 'status-v' : 'status-x';
+            html += `<td class="${cls}">${status}</td>`;
+        });
+        tr.innerHTML = html;
+        tb.appendChild(tr);
+    });
+}
+
+function closeChecklist() { document.getElementById('checklistModal').style.display = 'none'; }
+
+function cetakChecklist() {
+    html2canvas(document.getElementById('checklistPrintArea'), {scale:2}).then(c => {
+        const l = document.createElement('a');
+        l.download = `CHECKLIST_KAS_${tahun}.jpg`;
+        l.href = c.toDataURL('image/jpeg', 0.9);
+        l.click();
+    });
 }
 
 document.getElementById('adminBtn').onclick = function() {
@@ -246,18 +347,12 @@ document.getElementById('cetakBtn').onclick=()=>{
  toggleMenu(); window.scrollTo(0,0);
  const areaAdmin = document.getElementById('catatanWarga');
  const areaPrint = document.getElementById('catatanPrint');
- 
- // SWAP ELEMEN BIAR KE-FOTO SEBAGAI TEKS BIASA
  areaPrint.innerText = areaAdmin.value;
- areaAdmin.style.display = 'none';
- areaPrint.style.display = 'block';
-
+ areaAdmin.style.display = 'none'; areaPrint.style.display = 'block';
  setTimeout(()=>{
   html2canvas(document.body,{scale:2}).then(c=>{
    const l=document.createElement('a'); l.download=`KAS_${namaBulan[bulan]}_${tahun}.jpg`; l.href=c.toDataURL('image/jpeg',0.9); l.click();
-   // BALIKIN LAGI KE SEMULA
-   areaAdmin.style.display = 'block';
-   areaPrint.style.display = 'none';
+   areaAdmin.style.display = 'block'; areaPrint.style.display = 'none';
   });
  },500);
 };
@@ -267,4 +362,3 @@ updateUI();
 </script>
 </body>
 </html>
-
