--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 }
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:5px}
-.update-info {text-align:center; font-size:0.85rem; color:#666; margin-bottom:15px; font-weight:normal; text-transform:none;}
+.update-info {text-align:center; font-size:0.85rem; color:#666; margin-bottom:10px; font-weight:normal; text-transform:none;}
+
+/* STYLE UNTUK RUNNING TEXT DEADLINE */
+#deadline-banner {
+    background: #333; color: #fff; padding: 10px; margin: 10px 16px; 
+    border-radius: 8px; font-weight: bold; overflow: hidden; white-space: nowrap;
+}
+#deadline-banner marquee { font-size: 1.1rem; }
+.tgl-aman { color: #00ff00; } /* Hijau */
+.tgl-waspada { color: #ffff00; animation: blink 0.8s infinite; } /* Kuning Berkedip */
+.tgl-lewat { color: #ff4444; animation: pulse 1.5s infinite; } /* Merah Berdenyut */
+
+@keyframes blink { 0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
+@keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.02); } 100% { transform: scale(1); } }
+
 .menu-container {position:fixed; top:12px; right:12px; z-index:1000; display:flex; flex-direction:column; align-items:flex-end; gap:8px}
 .menu-items {display:none; flex-direction:column; gap:8px; background:rgba(0,0,0,0.9); padding:12px; border-radius:8px; box-shadow:0 4px 20px rgba(0,0,0,0.4)}
 .menu-items.show {display:flex}
@@ -23,13 +37,7 @@ button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 
 .note-box {border:2px dashed var(--border); padding:20px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px; min-height:200px}
-#catatanWarga {
-    width:100%; background:transparent; border:0; color:var(--text); 
-    font-family:inherit; font-size:1.1rem; resize:none; 
-    text-transform:none; min-height:150px; line-height:1.5;
-    white-space: pre-wrap; word-wrap: break-word;
-    display: block;
-}
+#catatanWarga { width:100%; background:transparent; border:0; color:var(--text); font-family:inherit; font-size:1.1rem; resize:none; text-transform:none; min-height:150px; line-height:1.5; white-space: pre-wrap; word-wrap: break-word; display: block; }
 #catatanPrint { display: none; white-space: pre-wrap; font-size:1.1rem; line-height:1.5; text-transform:none; }
 
 table{width:100%;border-collapse:collapse}
@@ -38,10 +46,7 @@ th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:transparent; color:var(--text); border:1px solid transparent}
 
-#checklistModal {
-    display:none; position:fixed; top:0; left:0; width:100%; height:100%; 
-    background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box;
-}
+#checklistModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
 .checklist-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:950px; margin:0 auto; }
 .checklist-content h1 { text-align:center; margin:0; font-size:1.5rem; background:#92c694; padding:10px; }
 .checklist-content h2 { text-align:center; margin:0; font-size:1.2rem; background:#d9ead3; padding:5px; border-bottom:2px solid #000; }
@@ -52,14 +57,8 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 .status-x { background:#e06666; color:#000; }
 
 .theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
-.theme-cyberpunk .block { border: 1px solid #ff00ff; animation: ledRotate 3s linear infinite; }
 .theme-cyberpunk th {background:#330033; color:#00ffcc; border-color:#00ffcc}
 .theme-cyberpunk input, .theme-cyberpunk textarea, .theme-cyberpunk #catatanPrint {color:#fff;}
-@keyframes ledRotate{
-  0%{box-shadow:0 0 5px #ff00ff, 0 0 10px #00ffcc}
-  50%{box-shadow:0 0 15px #ff00ff, 0 0 25px #00ffcc, 0 0 35px #ffff00}
-  100%{box-shadow:0 0 5px #ff00ff, 0 0 10px #00ffcc}
-}
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
@@ -78,6 +77,10 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
   </div>
   <div class="update-info" id="lastUpdate">TERAKHIR DI UPDATE PADA: -</div>
 </header>
+
+<div id="deadline-banner">
+    <marquee id="deadline-text" scrollamount="5">Mengecek tanggal...</marquee>
+</div>
 
 <div class="menu-container">
     <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
@@ -168,6 +171,20 @@ let isAdmin=false, autoSaveTimer=null, currentTheme='';
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 
+// FUNGSI UPDATE DEADLINE BANNER
+function updateDeadlineBanner() {
+    const hariIni = new Date().getDate();
+    const banner = document.getElementById('deadline-text');
+    
+    if (hariIni >= 1 && hariIni <= 3) {
+        banner.innerHTML = `<span class="tgl-aman">⚠️ REMINDER: Batas iuran kas bulan ini adalah tanggal 7 ⚠️ Terima kasih bagi yang sudah membayar!</span>`;
+    } else if (hariIni >= 4 && hariIni <= 7) {
+        banner.innerHTML = `<span class="tgl-waspada">⚠️ PERHATIAN: Harap segera lakukan pembayaran! Batas iuran sampai tanggal 7 ⚠️</span>`;
+    } else {
+        banner.innerHTML = `<span class="tgl-lewat">🛑 BATAS IURAN SUDAH LEWAT 🛑 Bagi yang belum bayar, harap segera melakukan pembayaran.</span>`;
+    }
+}
+
 function toggleMenu() { document.getElementById('menuItems').classList.toggle('show'); }
 
 function buildTables(){
@@ -192,10 +209,9 @@ function recalc(){
   tr.children[4].textContent=runM.toLocaleString('id-ID');
   const ketVal=tr.children[2].firstChild.value.toUpperCase();
   const inputs=tr.querySelectorAll('input');
+  const kuncis = ["LUNAS", "SUDAH BAYAR", "BAYAR TUNAI", "BAYAR TRANSFER", "SISA KAS"];
   if(ketVal.includes('BELUM BAYAR')){ inputs.forEach(inp=>{inp.style.backgroundColor='var(--danger)'; inp.style.color='#fff';}); }
-  else if(ketVal.includes('LUNAS') || ketVal.includes('SUDAH BAYAR') || ketVal.includes('SISA KAS') || ketVal.includes('BAYAR TUNAI') || ketVal.includes('BAYAR TRANSFER')){ 
-      inputs.forEach(inp=>{inp.style.backgroundColor='var(--success)'; inp.style.color='#fff';}); 
-  }
+  else if(kuncis.some(k => ketVal.includes(k))){ inputs.forEach(inp=>{inp.style.backgroundColor='var(--success)'; inp.style.color='#fff';}); }
   else { inputs.forEach(inp=>{inp.style.backgroundColor='transparent'; inp.style.color='var(--text)';}); }
  });
  document.querySelectorAll('#tbKeluar tr').forEach(tr=>{
@@ -309,7 +325,6 @@ document.getElementById('pullBtn').onclick=()=>{
   }
   const trSisa=document.querySelector('#tbMasuk tr');
   if(trSisa){
-    // PERBAIKAN: Isi Tanggal, Keterangan, dan Uang secara otomatis
     trSisa.children[0].firstChild.value = `${tahun}-${(bulan+1).toString().padStart(2,'0')}-01`;
     trSisa.children[2].firstChild.value = `SISA KAS ${namaBulan[pm]} ${pt}`;
     trSisa.children[3].firstChild.value = sL.toLocaleString('id-ID');
@@ -347,6 +362,7 @@ document.getElementById('cetakBtn').onclick=()=>{
 
 document.addEventListener('input', recalc);
 updateUI();
+updateDeadlineBanner(); // Jalankan fungsi deadline saat web dibuka
 </script>
 </body>
 </html>
