--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 
-.note-box {border:2px dashed var(--border); padding:20px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px; min-height:200px}
-#catatanWarga { width:100%; background:transparent; border:0; color:var(--text); font-family:inherit; font-size:1.1rem; resize:none; text-transform:none; min-height:150px; line-height:1.5; white-space: pre-wrap; word-wrap: break-word; display: block; }
+/* PERBAIKAN KOTAK CATATAN */
+.note-box {border:2px dashed var(--border); padding:20px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px; min-height:100px}
+#catatanWarga { width:100%; background:transparent; border:0; color:var(--text); font-family:inherit; font-size:1.1rem; resize:none; text-transform:none; min-height:50px; overflow:hidden; line-height:1.5; white-space: pre-wrap; word-wrap: break-word; display: block; }
 #catatanPrint { display: none; white-space: pre-wrap; font-size:1.1rem; line-height:1.5; text-transform:none; }
 
 table{width:100%;border-collapse:collapse}
@@ -46,6 +47,14 @@ th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:transparent; color:var(--text); border:1px solid transparent}
 
+/* THEME SETTINGS */
+.theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
+.theme-cyberpunk th {background:#330033; color:#00ffcc; border-color:#00ffcc}
+.theme-cyberpunk input, .theme-cyberpunk textarea, .theme-cyberpunk #catatanPrint {color:#fff;}
+.theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
+.theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
+
+/* MODAL CHECKLIST */
 #checklistModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
 .checklist-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:950px; margin:0 auto; }
 .checklist-content h1 { text-align:center; margin:0; font-size:1.5rem; background:#92c694; padding:10px; }
@@ -56,14 +65,12 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 .status-v { background:#93c47d; color:#000; }
 .status-x { background:#e06666; color:#000; }
 
-.theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
-.theme-cyberpunk th {background:#330033; color:#00ffcc; border-color:#00ffcc}
-.theme-cyberpunk input, .theme-cyberpunk textarea, .theme-cyberpunk #catatanPrint {color:#fff;}
-.theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
-.theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
+/* PERBAIKAN TABEL GRAND TOTAL */
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
 .grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:8px;text-align:center;font-weight:700}
-.grand-total-table td.saldo-akhir{background:var(--yellow);color:#000}
+.grand-total-table td#totalMasuk{background:var(--success);color:#fff} /* TOTAL MASUK HIJAU */
+.grand-total-table td#totalKeluar{background:var(--danger);color:#fff} /* TOTAL KELUAR MERAH */
+.grand-total-table td.saldo-akhir{background:var(--yellow);color:#000} /* SALDO AKHIR KUNING */
 </style>
 </head>
 <body>
@@ -110,15 +117,16 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 </div>
 
 <div class="block">
+<h2>GRAND TOTAL</h2>
 <table class="grand-total-table">
-<tr><th>Total Masuk</th><th>Total Keluar</th><th>Saldo Akhir</th></tr>
+<tr><th>TOTAL UANG MASUK</th><th>TOTAL UANG KELUAR</th><th>SALDO AKHIR</th></tr>
 <tr><td id="totalMasuk">0</td><td id="totalKeluar">0</td><td id="saldoAkhir" class="saldo-akhir">0</td></tr>
 </table>
 </div>
 
 <div class="block note-box">
   <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING & PENGUMUMAN</h2>
-  <textarea id="catatanWarga" class="editable" placeholder="Klik Admin ON untuk mengisi catatan di sini..."></textarea>
+  <textarea id="catatanWarga" class="editable" placeholder="Klik Admin ON untuk mengisi catatan di sini..." oninput="autoHeight(this)"></textarea>
   <div id="catatanPrint"></div>
 </div>
 
@@ -170,6 +178,12 @@ let bulan = skrg.getMonth(), tahun = skrg.getFullYear();
 let isAdmin=false, autoSaveTimer=null, currentTheme='';
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
+
+// FUNGSI AUTO RESIZE CATATAN
+function autoHeight(elem) {
+    elem.style.height = "1px";
+    elem.style.height = (elem.scrollHeight) + "px";
+}
 
 function updateDeadlineBanner() {
     const hariIni = new Date().getDate();
@@ -229,7 +243,12 @@ function loadData(){
   if(d){
    if(d.masuk) d.masuk.forEach((r,i)=>{ const tr=document.querySelectorAll('#tbMasuk tr')[i]; if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.nama||namaAnggota[i]; tr.children[2].firstChild.value=r.ket||''; tr.children[3].firstChild.value=r.uang||'0'; } });
    if(d.keluar) d.keluar.forEach((r,i)=>{ const tr=document.querySelectorAll('#tbKeluar tr')[i]; if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.ket||''; tr.children[2].firstChild.value=r.qty||'0'; tr.children[3].firstChild.value=r.harga||'0'; } });
-   if(d.catatan) { document.getElementById('catatanWarga').value = d.catatan; document.getElementById('catatanPrint').innerText = d.catatan; }
+   if(d.catatan) { 
+     const catArea = document.getElementById('catatanWarga');
+     catArea.value = d.catatan; 
+     document.getElementById('catatanPrint').innerText = d.catatan;
+     autoHeight(catArea); // Trigger melar saat load
+   }
    if(d.updated) document.getElementById('lastUpdate').textContent = "TERAKHIR DI UPDATE PADA: " + d.updated;
   }
   recalc(); applyAdminLock();
@@ -349,17 +368,12 @@ document.getElementById('cetakBtn').onclick=()=>{
  const areaAdmin = document.getElementById('catatanWarga');
  const areaPrint = document.getElementById('catatanPrint');
  const banner = document.getElementById('deadline-banner');
- 
- // 1. SEMBUNYIKAN BANNER DAN SWAP CATATAN
  banner.style.display = 'none';
  areaPrint.innerText = areaAdmin.value;
  areaAdmin.style.display = 'none'; areaPrint.style.display = 'block';
-
  setTimeout(()=>{
   html2canvas(document.body,{scale:2}).then(c=>{
    const l=document.createElement('a'); l.download=`KAS_${namaBulan[bulan]}_${tahun}.jpg`; l.href=c.toDataURL('image/jpeg',0.9); l.click();
-   
-   // 2. MUNCULKAN KEMBALI SETELAH DIFOTO
    banner.style.display = 'block';
    areaAdmin.style.display = 'block'; areaPrint.style.display = 'none';
   });
