--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@ button.main-menu {background:#333; color:#fff; border:2px solid #fff}
 button.primary{background:var(--accent);color:#fff}
 button.off{background:#999;color:#fff}
 button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
+
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 
-/* PERBAIKAN KOTAK CATATAN */
-.note-box {border:2px dashed var(--border); padding:20px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px; min-height:100px}
+/* ANIMASI SEISMOGRAF (HANYA MUNCUL DI CYBERPUNK) */
+.pulse-line { display:none; height:2px; width:100%; background:linear-gradient(90deg, transparent, #00ffcc, #ff00ff, transparent); position:relative; margin-bottom:15px; overflow:hidden; }
+.pulse-line::after { content:""; position:absolute; left:-100%; width:100%; height:100%; background:linear-gradient(90deg, transparent, #fff, transparent); animation: pulse-move 2s infinite linear; }
+
+@keyframes pulse-move { 0% { left: -100%; } 100% { left: 100%; } }
+
+/* TABEL GRAND TOTAL WARNA */
+.grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
+.grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:8px;text-align:center;font-weight:700}
+#totalMasuk { background:var(--success); color:#fff; }
+#totalKeluar { background:var(--danger); color:#fff; }
+.saldo-akhir { background:var(--yellow); color:#000; }
+
+/* NOTE BOX & AUTO HEIGHT */
+.note-box {border:2px dashed var(--border); padding:20px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px;}
 #catatanWarga { width:100%; background:transparent; border:0; color:var(--text); font-family:inherit; font-size:1.1rem; resize:none; text-transform:none; min-height:50px; overflow:hidden; line-height:1.5; white-space: pre-wrap; word-wrap: break-word; display: block; }
 #catatanPrint { display: none; white-space: pre-wrap; font-size:1.1rem; line-height:1.5; text-transform:none; }
 
@@ -47,10 +61,20 @@ th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:transparent; color:var(--text); border:1px solid transparent}
 
-/* THEME SETTINGS */
-.theme-cyberpunk{--bg:#0a0a0a;--card:#1a001a;--text:#ff00ff;--border:#00ffcc;--accent:#ffff00;--yellow:#ffff00;}
-.theme-cyberpunk th {background:#330033; color:#00ffcc; border-color:#00ffcc}
-.theme-cyberpunk input, .theme-cyberpunk textarea, .theme-cyberpunk #catatanPrint {color:#fff;}
+/* --- TEMA CYBERPUNK (BALIKIN LED & GLOW) --- */
+.theme-cyberpunk{--bg:#050505;--card:#0f0f0f;--text:#00ffcc;--border:#ff00ff;--accent:#ffff00;--yellow:#ffff00;}
+.theme-cyberpunk .pulse-line { display:block; }
+.theme-cyberpunk .block { border: 1px solid #00ffcc; box-shadow: 0 0 15px rgba(0,255,204,0.3); }
+.theme-cyberpunk th { background:#1a1a1a; color:#ff00ff; border: 1px solid #00ffcc; }
+/* Warna Garis Tabel Random di Cyberpunk */
+.theme-cyberpunk td { border: 1px solid #ff00ff; }
+.theme-cyberpunk tr:nth-child(odd) td { border-color: #00ffcc; }
+.theme-cyberpunk tr:nth-child(even) td { border-color: #ffff00; }
+.theme-cyberpunk input, .theme-cyberpunk textarea { color:#fff; text-shadow: 0 0 5px #fff; }
+.theme-cyberpunk #totalMasuk { background:#00ff00; color:#000; box-shadow: 0 0 10px #00ff00; }
+.theme-cyberpunk #totalKeluar { background:#ff0000; color:#fff; box-shadow: 0 0 10px #ff0000; }
+.theme-cyberpunk .saldo-akhir { background:#ffff00; color:#000; box-shadow: 0 0 10px #ffff00; }
+
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 
@@ -64,13 +88,6 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 .table-checklist th { background:#9fc5e8; }
 .status-v { background:#93c47d; color:#000; }
 .status-x { background:#e06666; color:#000; }
-
-/* PERBAIKAN TABEL GRAND TOTAL */
-.grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
-.grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:8px;text-align:center;font-weight:700}
-.grand-total-table td#totalMasuk{background:var(--success);color:#fff} /* TOTAL MASUK HIJAU */
-.grand-total-table td#totalKeluar{background:var(--danger);color:#fff} /* TOTAL KELUAR MERAH */
-.grand-total-table td.saldo-akhir{background:var(--yellow);color:#000} /* SALDO AKHIR KUNING */
 </style>
 </head>
 <body>
@@ -102,6 +119,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 
 <div class="block">
 <h2>PEMASUKAN</h2>
+<div class="pulse-line"></div>
 <table>
 <tr><th style="width:40px">Tgl</th><th style="width:25%">Nama</th><th style="width:60%">Keterangan</th><th style="width:15%">Masuk</th><th style="width:15%">Saldo</th></tr>
 <tbody id="tbMasuk"></tbody>
@@ -110,6 +128,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 
 <div class="block">
 <h2>PENGELUARAN</h2>
+<div class="pulse-line"></div>
 <table>
 <tr><th style="width:30px">Tgl</th><th style="width:40%">Keterangan</th><th style="width:8%">Qty</th><th style="width:25%">Harga</th><th style="width:25%">Total</th></tr>
 <tbody id="tbKeluar"></tbody>
@@ -118,6 +137,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 
 <div class="block">
 <h2>GRAND TOTAL</h2>
+<div class="pulse-line"></div>
 <table class="grand-total-table">
 <tr><th>TOTAL UANG MASUK</th><th>TOTAL UANG KELUAR</th><th>SALDO AKHIR</th></tr>
 <tr><td id="totalMasuk">0</td><td id="totalKeluar">0</td><td id="saldoAkhir" class="saldo-akhir">0</td></tr>
@@ -125,7 +145,8 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 </div>
 
 <div class="block note-box">
-  <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING & PENGUMUMAN</h2>
+  <h2 style="text-align:left; font-size:1.1rem; border-bottom:1px solid var(--border); padding-bottom:10px">📌 CATATAN PENTING</h2>
+  <div class="pulse-line"></div>
   <textarea id="catatanWarga" class="editable" placeholder="Klik Admin ON untuk mengisi catatan di sini..." oninput="autoHeight(this)"></textarea>
   <div id="catatanPrint"></div>
 </div>
@@ -179,7 +200,7 @@ let isAdmin=false, autoSaveTimer=null, currentTheme='';
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 
-// FUNGSI AUTO RESIZE CATATAN
+// AUTO RESIZE CATATAN
 function autoHeight(elem) {
     elem.style.height = "1px";
     elem.style.height = (elem.scrollHeight) + "px";
@@ -244,10 +265,10 @@ function loadData(){
    if(d.masuk) d.masuk.forEach((r,i)=>{ const tr=document.querySelectorAll('#tbMasuk tr')[i]; if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.nama||namaAnggota[i]; tr.children[2].firstChild.value=r.ket||''; tr.children[3].firstChild.value=r.uang||'0'; } });
    if(d.keluar) d.keluar.forEach((r,i)=>{ const tr=document.querySelectorAll('#tbKeluar tr')[i]; if(tr){ tr.children[0].firstChild.value=r.tanggal||''; tr.children[1].firstChild.value=r.ket||''; tr.children[2].firstChild.value=r.qty||'0'; tr.children[3].firstChild.value=r.harga||'0'; } });
    if(d.catatan) { 
-     const catArea = document.getElementById('catatanWarga');
-     catArea.value = d.catatan; 
+     const ta = document.getElementById('catatanWarga');
+     ta.value = d.catatan; 
      document.getElementById('catatanPrint').innerText = d.catatan;
-     autoHeight(catArea); // Trigger melar saat load
+     setTimeout(()=>autoHeight(ta), 100);
    }
    if(d.updated) document.getElementById('lastUpdate').textContent = "TERAKHIR DI UPDATE PADA: " + d.updated;
   }
